# ChromeExtensionLLM

backend_test/: README.md  appREADME.md  background.js  chatbot.js  database.js  lmstudioClient.js  main.py  main1.py  main2.py  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  test_main.py
backend_test/backendpkg/: app.py  pyvenv.cfg
backend_test/css/: chatUI.css
backend_test/js/: contentScript.js  popup.js
